--- a/source/css/rtl.css
+++ b/source/css/rtl.css
@@ -8,10 +8,10 @@ of your CSS stylesheet in a separate stylesheet file named rtl.css.
 https://codex.wordpress.org/Right-to-Left_Language_Support
 
 */
-
 /*
 body {
 	direction: rtl;
 	unicode-bidi: embed;
 }
 */
+/*# sourceMappingURL=rtl.css.map */
