--- a/_sass/_components.site-cover.scss
+++ b/_sass/_components.site-cover.scss
@@ -5,13 +5,13 @@
 .c-site-cover {
     position: relative;
     background-color: #333;
-    background-position: center center;
+    background-position: center top;
     background-size: cover;
     min-height: $unit * 8;
     font-size: 2.5vw;
 
     @include mq($from: tablet) {
-        padding-top: 34.28%;
+        padding-top: 33.33%;
         font-size: 1.5vw;
     }
 
@@ -34,7 +34,6 @@
 
     &--compact {
         margin-bottom: $unit-large;
-        background-position: center 62%;
         padding-top: 17.14%;
     }
 
