Show empty modules

--- a/_sass/_components.modules.scss
+++ b/_sass/_components.modules.scss
@@ -8,7 +8,7 @@
     transition: $global-transition;
     color: $c-white;
 
-    &:hover {
+    &--active:hover {
         box-shadow: 0 4px $unit-small rgba($c-black, .25);
         transform: translateY(-2px);
     }
