--- a/_sass/_settings.colors.scss
+++ b/_sass/_settings.colors.scss
@@ -12,7 +12,7 @@ $c-secondary:             #EDBF5C;
 $c-secondary-lighter:     lighten($c-secondary, 35%);
 $c-secondary-darker:      darken($c-secondary, 10%);
 
-$c-tertiary:              #439d7d;
+$c-tertiary:              #C1565F;
 $c-tertiary-lighter:      lighten($c-tertiary, 42%);
 $c-tertiary-darker:       darken($c-tertiary, 10%);
 
